# sisauth/app/Http/Controllers/Controller.php
@@ -2,11 +2,25 @@
 
 namespace App\Http\Controllers;
 
-use Illuminate\Foundation\Bus\DispatchesJobs;
-use Illuminate\Routing\Controller as BaseController;
-use Illuminate\Foundation\Validation\ValidatesRequests;
 use Illuminate\Foundation\Auth\Access\AuthorizesRequests;
+use Illuminate\Foundation\Bus\DispatchesJobs;
+use Illuminate\Foundation\Validation\ValidatesRequests;
+use Illuminate\Routing\Controller as BaseController;
 
+/**
+ *@OA\Info(
+ *  title="Your Application API document",
+ *  version="1.0.0",
+ *),
+ *@OA\SecurityScheme(
+ *  securityScheme="bearerAuth",
+ *  in="header",
+ *  name="bearerAuth",
+ *  type="http",
+ *  scheme="bearer",
+ *  bearerFormat="JWT",
+ *),
+ */
 class Controller extends BaseController
 {
     use AuthorizesRequests, DispatchesJobs, ValidatesRequests;
