# sisauth/routes/api.php
@@ -1,27 +1,31 @@
 <?php
 
 use Illuminate\Support\Facades\Route;
-use App\Http\Controllers\AuthController;
-use App\Http\Controllers\UserController;
+use App\Http\Controllers\Api\AuthController;
+use App\Http\Controllers\Api\UserController;
+use App\Http\Controllers\Api\AddressController;
 
-require_once base_path('app/SwaggerDefinitions.php');
-
-Route::group(['middleware' => 'cors'], function () {
-    Route::post('/api/login', [AuthController::class, 'login']);
+Route::group(['middleware' => 'api'], function () {
+    Route::post('/api/auth/login', [AuthController::class, 'login']);
 
     Route::middleware(['jwt.auth'])->group(function () {
-        Route::get('/api/logout', [AuthController::class, 'logout']);
         
-        Route::get('/api/users', [UserController::class, 'index']);
-        Route::get('/api/users/{id}', [UserController::class, 'show']); // Rota para mostrar detalhes de um usuário pelo ID
-        Route::post('/api/users', [UserController::class, 'store']); // Rota para criar um novo usuário
-        Route::put('/api/users/{id}', [UserController::class, 'update']); // Rota para atualizar um usuário pelo ID
-        Route::delete('/api/users/{id}', [UserController::class, 'destroy']); // Rota para excluir um usuário pelo ID
+        Route::get('/users', [UserController::class, 'index']);
+        Route::get('/users/{id}', [UserController::class, 'show']);
+        Route::post('/users', [UserController::class, 'store']);
+        Route::put('/users/{id}', [UserController::class, 'update']);
+        Route::delete('/users/{id}', [UserController::class, 'destroy']);
 
-        Route::get('/api/addresses/{id}/details', 'AddressController@index');
-        Route::get('/api/addresses/{uid}/user-details', 'AddressController@getAddresUserId');
-        Route::post('/api/addresses/{uid}/new', 'AddressController@store');
-        Route::put('/api/addresses/{id}/update', 'AddressController@update');
-        Route::delete('/api/addresses/{id}/delete', 'AddressController@destroy');
+        Route::get('/addresses/{id}/details', 'AddressController@index');
+        Route::get('/addresses/{uid}/user-details', 'AddressController@getAddresUserId');
+        Route::post('/addresses/{uid}/new', 'AddressController@store');
+        Route::put('/addresses/{id}/update', 'AddressController@update');
+        Route::delete('/addresses/{id}/delete', 'AddressController@destroy');
     });
+});
+Route::group(['middleware' => 'api'], function ($router) {
+    Route::post('/auth/login', [AuthController::class, 'login']);
+    Route::post('/auth/logout', [AuthController::class, 'logout']);
+    Route::get('/auth/profile', [AuthController::class, 'userProfile']);
+    Route::post('/auth/change-password', [AuthController::class, 'changePassWord']);
 });
